# course_vio

./: .gitignore
vio_homework_code/L1/: CMakeLists.txt  rotationUpdate  rotationUpdate.cpp
vio_homework_code/L2/code_utils/src/: sumpixel_test.cpp
vio_homework_code/L2/imu_utils/data/: data_vio_imu_1_acc_t.txt  data_vio_imu_1_acc_x.txt  data_vio_imu_1_acc_y.txt  data_vio_imu_1_acc_z.txt  data_vio_imu_1_gyr_x.txt  data_vio_imu_1_gyr_y.txt  data_vio_imu_1_gyr_z.txt  data_vio_imu_1_sim_acc_x.txt  data_vio_imu_1_sim_acc_y.txt  data_vio_imu_1_sim_acc_z.txt  data_vio_imu_1_sim_gyr_x.txt  data_vio_imu_1_sim_gyr_y.txt  data_vio_imu_1_sim_gyr_z.txt  data_vio_imu_2_acc_x.txt  data_vio_imu_2_acc_y.txt  data_vio_imu_2_acc_z.txt  data_vio_imu_2_gyr_t.txt  data_vio_imu_2_gyr_x.txt  data_vio_imu_2_gyr_y.txt  data_vio_imu_2_gyr_z.txt  data_vio_imu_2_sim_acc_x.txt  data_vio_imu_2_sim_acc_y.txt  data_vio_imu_2_sim_acc_z.txt  data_vio_imu_2_sim_gyr_x.txt  data_vio_imu_2_sim_gyr_y.txt  data_vio_imu_2_sim_gyr_z.txt  data_vio_imu_3_acc_x.txt  data_vio_imu_3_acc_y.txt  data_vio_imu_3_acc_z.txt  data_vio_imu_3_gyr_x.txt  data_vio_imu_3_gyr_y.txt  data_vio_imu_3_gyr_z.txt  data_vio_imu_3_sim_acc_x.txt  data_vio_imu_3_sim_acc_y.txt  data_vio_imu_3_sim_acc_z.txt  data_vio_imu_3_sim_gyr_t.txt  data_vio_imu_3_sim_gyr_x.txt  data_vio_imu_3_sim_gyr_y.txt  data_vio_imu_3_sim_gyr_z.txt  data_vio_imu_sim_acc_t.txt  (+16 more)
vio_homework_code/L2/imu_utils/launch/: vio_imu_sim.launch
vio_homework_code/L2/imu_utils/scripts/: allan_with_degree.m  allan_with_rad.m  draw_allan.m
vio_homework_code/L2/kalibr_allan/bagconvert/: CMakeLists.txt
vio_homework_code/L2/kalibr_allan/matlab/: SCRIPT_allan_matparallel.m  SCRIPT_process_results.m
vio_homework_code/L2/vio_data_simulation-master/main/: gener_alldata.cpp
vio_homework_code/L2/vio_data_simulation-master/python_tool/: draw_trajcory.py
vio_homework_code/L3/CurveFitting_LM/: CMakeLists.txt
vio_homework_code/L4/nullspace_test/: hessian_nullspace_test.cpp
vio_homework_code/L5/BA_schur/: CMakeLists.txt
vio_homework_code/L5/BA_schur/app/: CMakeLists.txt  CurveFitting_g2o.cpp  TestMonoBA.cpp
vio_homework_code/L5/BA_schur/backend/: CMakeLists.txt  edge.cc  edge.h  edge_imu.cc  edge_imu.h  edge_prior.cpp  edge_reprojection.cc  edge_reprojection.h  problem.cc  problem.h  vertex.h  vertex_pose.cc  vertex_pose.h
vio_homework_code/L5/BA_schur/frontend/: camera.h  feature.h  frame.h  map_point.h
vio_homework_code/L5/BA_schur/utils/: tic_toc.h
vio_homework_code/L6/Triangulate/: CMakeLists.txt  triangulate.cpp
vio_homework_submit/Shenlan-Eba_-VIO_hw1/: voi_hw1.docx
vio_homework_submit/Shenlan-Eba_-VIO_hw1/attachment/: rotationUpdate.cpp
vio_homework_submit/Shenlan-Eba_-VIO_hw2/: voi_hw2-v2.docx
vio_homework_submit/Shenlan-Eba_-VIO_hw3/: voi_hw3-v1.docx  voi_hw3-v2.docx
vio_homework_submit/Shenlan-Eba_-VIO_hw3/attachment/: 1.1-lambdas.txt  1.2-CurveFitting2.cpp  1.2-runing_log.txt  1.3-problem.cc
vio_homework_submit/Shenlan-Eba_-VIO_hw4/: voi_hw4.docx
vio_homework_submit/Shenlan-Eba_-VIO_hw4/attachment/: running_log.txt
vio_homework_submit/Shenlan-Eba_-VIO_hw5/: voi_hw5.docx
vio_homework_submit/Shenlan-Eba_-VIO_hw5/attachment/: problem.cc
vio_homework_submit/Shenlan-Eba_-VIO_hw6/: voi_hw6.docx
(+24 files in other folders)
